--- a/app/src/main/res/layout/detalle__faltante__sobrante__envases.xml
+++ b/app/src/main/res/layout/detalle__faltante__sobrante__envases.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
     android:orientation="vertical"
@@ -9,27 +10,29 @@
     android:background="#FFF"
 
 
-    tools:context=".Detalle_Dinero">
+    tools:context=".Detalle_Faltante_Sobrante_Envases">
+
 
 
 
     <LinearLayout
 
-        android:id="@+id/layout_vertical_padre_detalle_dinero"
+        android:id="@+id/layout_vertical_padre_detalle_fse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
 
 
+
         <TextView
 
-            android:id="@+id/tv_detalle_dinero_titulo"
+            android:id="@+id/tv_detalle_fse_titulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:text="DETALLE DE DINERO"
+            android:text="FALTANTES Y/O SOBRANTES EN LA SEMANA "
             android:gravity="center"
             android:textColor="#303f9f"
             android:textSize="25sp"
@@ -38,14 +41,17 @@
 
         <LinearLayout
 
-            android:id="@+id/layout_vertical_hijo_detalle_dinero"
+            android:id="@+id/layout_vertical_hijo_detalle_fse"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:orientation="vertical">
 
+
+
+
             <LinearLayout
 
-                android:id="@+id/llv_contenedor_para_bordes_detalle_dinero"
+                android:id="@+id/llv_contenedor_para_bordes_detalle_fse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/borde_linear_layout"
@@ -66,11 +72,11 @@
 
                     <TextView
 
-                        android:id="@+id/tandas_detalle_dinero"
+                        android:id="@+id/dias_detalle_fse"
                         android:layout_width="90dp"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="TANDAS"
+                        android:text="DÍAS"
                         android:textAlignment="center"
                         android:textColor="#FFFF"
                         android:textSize="18sp"
@@ -82,18 +88,16 @@
                         android:id="@+id/img_detalle_dinero_recibido"
                         android:layout_width="30dp"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_dinero_recibido" />
-
-
+                        android:src="@drawable/ic_sobrante_detalle_fse" />
 
 
                     <TextView
 
-                        android:id="@+id/recibiste_detalle_dinero"
-                        android:layout_width="90dp"
+                        android:id="@+id/tv_sobrante_detalle_fse"
+                        android:layout_width="100dp"
                         android:layout_height="match_parent"
                         android:gravity="center|left"
-                        android:text="RECIBISTE"
+                        android:text="SOBRANTE"
                         android:textColor="#FFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
@@ -101,77 +105,82 @@
 
                     <ImageView
 
-                        android:id="@+id/img_detalle_dinero_entregado"
+                        android:id="@+id/img_detalle_fse"
                         android:layout_width="30dp"
                         android:layout_height="match_parent"
-                        android:src="@drawable/ic_dinero_entregado" />
+                        android:src="@drawable/ic_faltante_detalle_fse" />
 
 
                     <TextView
-                        android:id="@+id/entregaste_detalle_dinero"
+
+                        android:id="@+id/tv_faltante_detalle_fse"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center|left"
-                        android:text="ENTREGASTE"
+                        android:text="FALTANTE"
                         android:textColor="#FFF"
                         android:textSize="18sp"
                         android:textStyle="bold" />
-
 
                 </LinearLayout>
 
 
                 <LinearLayout
 
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
-
-
-                    <TextView
-
-                        android:id="@+id/tv_numero_tanda_detalle_dinero"
-                        android:layout_width="90dp"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:hint="Número"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-
-                        android:id="@+id/tv_cantidad_carga_detalle_dinero"
-                        android:layout_width="120dp"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:hint="$"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-
-                    <TextView
-
-                        android:id="@+id/tv_cantidad_descarga_detalle_dinero"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center"
-                        android:hint="$"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
+                        android:layout_height="50dp"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+
+                        <TextView
+
+                            android:id="@+id/tv_numero_tanda_detalle_dinero"
+                            android:layout_width="90dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:hint="Lunes"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+
+                            android:id="@+id/tv_cantidad_carga_detalle_dinero"
+                            android:layout_width="130dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:hint="Cantidad"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+
+                        <TextView
+
+                            android:id="@+id/tv_cantidad_descarga_detalle_dinero"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:hint="Cantidad"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
 
 
 
                 </LinearLayout>
 
 
-            </LinearLayout> <!-- FIN DEL llv_contenedor_para_bordes_detalle_dinero  -->
+            </LinearLayout> <!-- FIN DEL llv_contenedor_para_bordes_detalle_fse -->
 
-        </LinearLayout> <!-- FIN DEL layout_vertical_hijo_detalle_dinero  -->
 
-    </LinearLayout>  <!-- FIN DEL layout_vertical_padre_detalle_dinero -->
+        </LinearLayout> <!-- FIN DEL layout_vertical_hijo_detalle_fse -->
+
+
+    </LinearLayout> <!-- FIN DEL layout_vertical_padre_detalle_fse -->
+
+
+
 
 
 
