--- a/app/src/main/res/layout/detalle_envases.xml
+++ b/app/src/main/res/layout/detalle_envases.xml
@@ -12,84 +12,162 @@
     tools:context=".Detalle_Envases">
 
 
-    <TextView
-
-        android:id="@+id/tv_detalle_envasestitulo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:text="DETALLE DE ENVASES"
-        android:gravity="center"
-        android:textColor="#303f9f"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#283593"
-        android:orientation="horizontal"
-        android:weightSum="3">
 
-
-        <TextView
-            android:id="@+id/tv_tandas_detalle_envases"
+            android:id="@+id/layout_vertical_padre_detalle_envases"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+
+
+            <TextView
+
+            android:id="@+id/tv_detalle_envases_titulo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="DETALLE DE ENVASES"
             android:gravity="center"
-            android:text="TANDAS"
-            android:textAlignment="center"
-            android:textColor="#FFF"
-            android:textSize="20sp"
+            android:textColor="#303f9f"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
+            <LinearLayout
 
-        <ImageView
+                android:id="@+id/layout_vertical_hijo_detalle_envases"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:orientation="vertical">
 
-            android:id="@+id/img_carga_detalle_envases"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_carga" />
+                <LinearLayout
 
-
-        <TextView
-
-            android:id="@+id/tv_carga_detalle_envases"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center|left"
-            android:text="ENTREGA"
-            android:textColor="#FFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+                    android:id="@+id/llv_contenedor_para_bordes_detalle_envases"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/borde_linear_layout"
+                    android:orientation="vertical">
 
 
-        <ImageView
 
-            android:id="@+id/img_descarga_detalle_envases"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_retiro_erep" />
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:background="#283593"
+                        android:orientation="horizontal"
+                        android:layout_marginLeft="2dp"
+                        android:layout_marginRight="2dp"
+                        android:layout_marginTop="2dp"
+                        android:weightSum="1">
 
 
-        <TextView
+                        <TextView
 
-            android:id="@+id/tv_descarga_detalle_envases"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center|left"
-            android:text="RETIRO"
-            android:textColor="#FFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+                            android:id="@+id/tv_tandas_detalle_envases"
+                            android:layout_width="90dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="TANDAS"
+                            android:textAlignment="center"
+                            android:textColor="#FFF"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+
+                        <ImageView
+
+                            android:id="@+id/img_carga_detalle_envases"
+                            android:layout_width="30dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_carga" />
+
+
+                        <TextView
+
+                            android:id="@+id/tv_carga_detalle_envases"
+                            android:layout_width="90dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center|left"
+                            android:text="CARGA"
+                            android:textColor="#FFFF"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+
+                        <ImageView
+
+                            android:id="@+id/img_descarga_detalle_envases"
+                            android:layout_width="30dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_retiro_erep" />
+
+
+                        <TextView
+
+                            android:id="@+id/tv_descarga_detalle_envases"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center|left"
+                            android:text="DESCARGA"
+                            android:textColor="#FFFF"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:orientation="horizontal"
+                        android:weightSum="1">
+
+
+                        <TextView
+
+                            android:id="@+id/tv_numero_tanda_detalle_envases"
+                            android:layout_width="90dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:hint="Número"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+
+                            android:id="@+id/tv_cantidad_carga_detalle_envases"
+                            android:layout_width="120dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:hint="Cantidad"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+
+                        <TextView
+
+                            android:id="@+id/tv_cantidad_descarga_detalle_envases"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="center"
+                            android:hint="Cantidad"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+
+
+                    </LinearLayout>
+
+
+                </LinearLayout> <!-- FIN DEL llv_contenedor_para_bordes_detalle_art -->
+
+            </LinearLayout> <!-- FIN DEL layout_vertical_hijo_detalle_envases -->
+
+
+    </LinearLayout> <!-- FIN DEL layout_vertical_padre_detalle_envases -->
 
 
     </LinearLayout>
-
-
-</LinearLayout>
