--- a/app/src/main/res/layout/fragment_stock_en_vehiculo.xml
+++ b/app/src/main/res/layout/fragment_stock_en_vehiculo.xml
@@ -593,6 +593,7 @@
 
                      <TextView
 
+                         android:id="@+id/tv_faltante_sobrante_titulo"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
