--- a/app/src/main/res/layout/repartidores_activity_main.xml
+++ b/app/src/main/res/layout/repartidores_activity_main.xml
@@ -31,6 +31,20 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <View
+
+            android:id="@+id/view_estado_evento"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="#303f9f">
+
+        </View>
+
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
