--- a/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
+++ b/app/src/main/res/layout/activity_realizar_ventas_clientes_supervisor.xml
@@ -22,11 +22,10 @@
 
     </android.support.v7.widget.Toolbar>
 
-    <ScrollView
 
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
 
         <LinearLayout
 
@@ -34,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:weightSum="2">
+            android:weightSum="4">
 
 
             <!--#################################################################-->
@@ -44,8 +43,9 @@
 
                 android:id="@+id/llv_datos_personales"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="400dp"
                 android:layout_marginBottom="20dp"
+                android:layout_weight="1"
                 android:background="#ff5722"
                 android:orientation="vertical"
                 android:weightSum="5">
@@ -101,8 +101,6 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="horizontal">
-
-
 
 
                     <TextView
@@ -170,8 +168,10 @@
             <!--################################################################-->
 
             <ScrollView
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:background="#FFFF">
 
                 <LinearLayout
@@ -208,8 +208,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:orientation="horizontal"
-                            android:background="@drawable/spinner_style">
+                            android:background="@drawable/spinner_style"
+                            android:orientation="horizontal">
 
 
                             <Spinner
@@ -282,8 +282,6 @@
                         android:textStyle="bold" />
 
 
-
-
                     <ImageButton
 
                         android:id="@+id/img_button_confirmar_ventas_supervisor"
@@ -293,7 +291,6 @@
                         android:layout_weight="1"
                         android:background="@mipmap/contenedor_checkbox"
                         android:src="@drawable/ic_check_rojo" />
-
 
 
                     <TextView
@@ -375,6 +372,5 @@
         </LinearLayout>
 
     </ScrollView>
-
 
 </LinearLayout>
