Creación de item_evento EXITOSA
Se podido crear el item en la activity de BuscarResponsableParaPatrocinio. Contiunar

--- a/app/src/main/res/layout/content_buscar_responsable_para_patrocinio.xml
+++ b/app/src/main/res/layout/content_buscar_responsable_para_patrocinio.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
+    android:id="@+id/scroll_parent_brpp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -24,12 +25,6 @@
         android:orientation="vertical">
 
 
-
-
-
-
-
-
     </LinearLayout>     <!-- Fin del "parent_layout_vertical_buscador_evento" -->
 
 
@@ -39,4 +34,4 @@
 
 
 
-</LinearLayout>
+</ScrollView>
